<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_label">

    <PreferenceCategory
        android:title="@string/start_date_preference">
        <EditTextPreference
            android:defaultValue="@string/settings_start_date_default"
            android:inputType="date"
            android:key="@string/settings_start_date_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_start_date_label" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/end_date_preference">
        <SwitchPreference
            android:defaultValue="@string/settings_today_default"
            android:key="@string/settings_today_key"
            android:title="@string/settings_today_label"/>
        <EditTextPreference
            android:defaultValue="@string/settings_end_date_default"
            android:inputType="date"
            android:key="@string/settings_end_date_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_end_date_label"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/order_preference">
        <ListPreference
            android:defaultValue="@string/settings_order_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_order_by_key"
            android:title="@string/settings_order_by_label" />

    </PreferenceCategory>
</PreferenceScreen>